# jacq

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  deny.toml
.claude-plugin/: plugin.json
.claude/commands/: generate-examples.md  spec-check.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
crates/jacq-cli/: Cargo.toml
crates/jacq-cli/src/: cli.rs  main.rs
crates/jacq-cli/tests/: cli_tests.rs  e2e_conformance.rs
crates/jacq-core/: Cargo.toml
crates/jacq-core/src/: analyzer.rs  emitter.rs  error.rs  ir.rs  lib.rs  packer.rs  parser.rs  targets.rs  template.rs
crates/jacq-core/tests/: analyzer_tests.rs  emitter_tests.rs  ir_tests.rs  parser_tests.rs  roundtrip_tests.rs
crates/jacq-core/tests/fixtures/claude-code-plugin/.claude-plugin/: plugin.json
crates/jacq-core/tests/fixtures/ir-plugin/: plugin.yaml
crates/jacq-core/tests/fixtures/ir-plugin/agents/: reviewer.md
crates/jacq-core/tests/fixtures/ir-plugin/lsp/: rust-analyzer.lsp.json
crates/jacq-core/tests/fixtures/ir-plugin/shared/: common-rules.md  error-handling.md
crates/jacq-core/tests/fixtures/ir-plugin/skills/: search.md
docs/: learning-guide.md
docs/research/: competitive-landscape.md  prompt-engineering-prior-art.md  slopcop-and-valara-patterns.md
examples/: README.md
examples/agent-sdk-dev/: plugin.yaml
examples/asana/: plugin.yaml
examples/claude-code-setup/: plugin.yaml
examples/claude-md-management/: plugin.yaml
examples/code-review/: plugin.yaml
examples/code-simplifier/: plugin.yaml
examples/commit-commands/: plugin.yaml
examples/context7/: plugin.yaml
examples/design/: plugin.yaml
examples/discord/: plugin.yaml
examples/documentation/: plugin.yaml
examples/example-plugin/: plugin.yaml
examples/explanatory-output-style/: plugin.yaml
examples/fakechat/: plugin.yaml
examples/feature-dev/: plugin.yaml
examples/feature-dev/instructions/: guidelines.md
examples/feature-dev/shared/: quality-standards.md
examples/featureflag-migration/: plugin.yaml
examples/featureflag-migration/agents/: feature-flag-cleaner.md  feature-flag-inventory.md  feature-flag-migrator.md  feature-flag-scaffolder.md  feature-flag-verifier.md
examples/featureflag-migration/skills/openfeature-migration/: SKILL.md
examples/firebase/: plugin.yaml
examples/frontend-design/: plugin.yaml
examples/git-workflows/: plugin.yaml
examples/github/: plugin.yaml
examples/gitlab/: plugin.yaml
examples/greptile/: plugin.yaml
examples/hookify/: plugin.yaml
examples/imessage/: plugin.yaml
examples/laravel-boost/: plugin.yaml
examples/learning-output-style/: plugin.yaml
examples/linear/: plugin.yaml
examples/math-olympiad/: plugin.yaml
examples/mcp-server-dev/: plugin.yaml
examples/notes-app/: plugin.yaml
examples/planning/: plugin.yaml
examples/playground/: plugin.yaml
examples/playwright/: plugin.yaml
examples/plugin-dev/: plugin.yaml
examples/pm/: plugin.yaml
examples/pr-review-toolkit/: plugin.yaml
examples/ralph-loop/: plugin.yaml
examples/security-guidance/: plugin.yaml
examples/serena/: plugin.yaml
examples/skill-creator/: plugin.yaml
examples/slack/: plugin.yaml
examples/supabase/: plugin.yaml
examples/telegram/: plugin.yaml
examples/terraform/: plugin.yaml
examples/testing-reliability/: plugin.yaml
research/: dogfooding-findings.md  rust-tooling-patterns.md
scripts/: generate-examples.sh  spec-check.sh
skills/spec-check/: SKILL.md
src/: analyzer.rs  cli.rs  emitter.rs  error.rs  ir.rs  lib.rs  main.rs  parser.rs  targets.rs  template.rs
supply-chain/: config.toml
tests/: analyzer_tests.rs  cli_tests.rs  emitter_tests.rs  ir_tests.rs  parser_tests.rs  roundtrip_tests.rs
tests/fixtures/bad-frontmatter/: plugin.json
tests/fixtures/bad-frontmatter/commands/: broken.md
tests/fixtures/claude-code-plugin/commands/: farewell.md  greet.md
tests/fixtures/ir-plugin/: plugin.yaml
tests/fixtures/ir-plugin/agents/: reviewer.md
tests/fixtures/ir-plugin/hooks/: lint.yaml
tests/fixtures/ir-plugin/instructions/: rules.md
tests/fixtures/ir-plugin/mcp/: db-server.yaml
tests/fixtures/ir-plugin/targets/opencode/: custom-tool.ts
