[workspace]
resolver = "2"
members = [
    "crates/jacq-core",
    "crates/jacq-cli",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/jacq-dev/jacq"
homepage = "https://github.com/jacq-dev/jacq"
authors = ["jacq contributors"]

# Shared dependency versions — keep in sync across workspace members.
# Pinning to specific versions is a supply-chain defense: it means
# `cargo update` is an explicit, auditable action, not an implicit one.
[workspace.dependencies]
# Error handling
miette = { version = "7.2", features = ["fancy"] }
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Filesystem
walkdir = "2.5"

# Templating
tera = "1.20"

# Packaging — tar.gz archives for `jacq pack`. Pure-Rust deflate via
# miniz_oxide keeps us away from C zlib bindings.
tar = "0.4"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

# Internal crates
jacq-core = { path = "crates/jacq-core", version = "0.1.1" }

# Dev dependencies
[workspace.dependencies.insta]
version = "1.41"
features = ["yaml"]

[workspace.dependencies.tempfile]
version = "3.14"

# ---------------------------------------------------------------------------
# Release profile — small binaries, maximum optimization
# ---------------------------------------------------------------------------
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
